# gleif-mcp-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_MSG.tmp  CONTRIBUTING.md  LICENSE  README.md  gleif_mcp_server.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
examples/: basic_usage.py
gleif_mcp/: _gleif_client.py  client.py  server.py
tests/: test_client.py  test_server.py
