[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gleif-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for the GLEIF (Global Legal Entity Identifier Foundation) REST API"
authors = [
    { name = "GenAICPA", email = "contact@genacpa.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["mcp", "gleif", "lei", "legal-entity-identifier", "api", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
dependencies = [
    "httpx>=0.24.0",
    "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/GenAICPA/gleif-mcp-server"
Repository = "https://github.com/GenAICPA/gleif-mcp-server"
Issues = "https://github.com/GenAICPA/gleif-mcp-server/issues"

[project.scripts]
gleif-mcp-server = "gleif_mcp.server:main"